--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="images/favicon.ico" title="Favicon"/>
+    <link rel="shortcut icon" href="images/favicon.png" title="Favicon"/>
 
     <!-- Main CSS Files -->
     <link rel="stylesheet" href="css/style.css">
@@ -74,11 +74,11 @@
                         <!--Social Icons in Header-->
                         <ul class="social-icons">
                             <li>
-                                <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
-                                    <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
+                                <a target="_blank" title="Telegram" href="https://t.me/tolyakJa">
+                                    <i class="fa fa-telegram fa-1x"></i><span>Telegram</span>
                                 </a>
                             </li>
-                            <li>
+                          <!--  <li>
                                 <a target="_blank" title="Google+" href="http://google.com/+username">
                                     <i class="fa fa-google-plus fa-1x"></i><span>Google+</span>
                                 </a>
@@ -97,7 +97,7 @@
                                 <a target="_blank" title="behance" href="http://www.behance.net">
                                     <i class="fa fa-behance fa-1x"></i><span>Behance</span>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                         <!--End of Social Icons in Header-->
 
@@ -150,7 +150,7 @@
                 </div>
 
                 <!--Call to Action-->
-                <a href="#" class="button">Заказать проект</a>
+                <a href="https://t.me/tolyakJa" class="button">Заказать проект</a>
                 <!--End Call to Action-->
 
             </div>
@@ -394,9 +394,9 @@
 
                     <a href="#" class="col-3">
                         <img src="images/company-images/company-logo1.png" alt="Company"/>
-                        <div class="client-overlay"><span>Tree</span></div>
+                        <div class="client-overlay"><span>Мессенджер</span></div>
                     </a>
-                    <a href="#" class="col-3">
+                    <!--<a href="#" class="col-3">
                         <img src="images/company-images/company-logo2.png" alt="Company"/>
                         <div class="client-overlay"><span>Fingerprint</span></div>
                     </a>
@@ -428,7 +428,7 @@
                     <a href="#" class="col-3">
                         <img src="images/company-images/company-logo9.png" alt="Company"/>
                         <div class="client-overlay"><span>Cold</span></div>
-                    </a>
+                    </a>-->
 
                 </div>
 
@@ -464,7 +464,7 @@
                             <li>Введение в курс дела разработки Ваших программистов</li>
                             <li>Гарантия на месяц. В случае неудачной сделки - средства будут возвращены</li>
                         </ul>
-                        <a href="#" class="button">+ В СПИСОК</a>
+                        <a href="https://t.me/tolyakJa" class="button">+ В СПИСОК</a>
                     </div>
                 </div>
                 <!--End Pricing Block-->
@@ -485,7 +485,7 @@
                             <li>Введение в курс дела разработки Ваших программистов</li>
                             <li>Гарантия на один месяц + страховка. В случае чего нас за наш счёт заменят другие программисты</li>
                         </ul>
-                        <a href="#" class="button">+ В СПИСОК</a>
+                        <a href="https://t.me/tolyakJa" class="button">+ В СПИСОК</a>
                     </div>
                 </div>
                 <!--End Pricing Block-->
@@ -506,7 +506,7 @@
                             <li>Введение в курс дела разработки Ваших программистов</li>
                             <li>Гарантия на два месяца + страховка</li>
                         </ul>
-                        <a href="#" class="button">+ В СПИСОК</a>
+                        <a href="https://t.me/tolyakJa" class="button">+ В СПИСОК</a>
                     </div>
                 </div>
                 <!--End Pricing Block-->
@@ -528,11 +528,11 @@
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
                 <li>
-                    <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
-                        <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
+                    <a target="_blank" title="Telegram" href="https://t.me/tolyakJa">
+                        <i class="fa fa-telegram fa-1x"></i><span>Telegram</span>
                     </a>
                 </li>
-                <li>
+               <!-- <li>
                     <a target="_blank" title="Google+" href="http://google.com/+username">
                         <i class="fa fa-google-plus fa-1x"></i><span>Google+</span>
                     </a>
@@ -551,7 +551,7 @@
                     <a target="_blank" title="behance" href="http://www.behance.net">
                         <i class="fa fa-behance fa-1x"></i><span>Behance</span>
                     </a>
-                </li>
+                </li> -->
             </ul>
             <!--End of Social Icons in Footer-->
         </div>
